[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/DumbDieAssests.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://game elements/elementSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/WinMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://world.gd" type="Script" id=7]
[ext_resource path="res://Assets/sounds/MainGame.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/sounds/winApplause.wav" type="AudioStream" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 144, 32, 0, 32, 0, 0, 144, 0 )

[sub_resource type="TileSet" id=2]
0/name = "DumbDieAssests.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "DumbDieAssests.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 144, 128, 144, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "DumbDieAssests.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 144, 112, 144, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 80 )

[node name="world" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 144, 160 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458752, 2, 0, 524288, 1, 0 )

[node name="elementSpawner" parent="." instance=ExtResource( 5 )]
z_index = -1

[node name="boundary" type="Node2D" parent="."]
position = Vector2( 8, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="bound" type="StaticBody2D" parent="boundary"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary/bound"]
position = Vector2( -16, 80 )
shape = SubResource( 3 )

[node name="bound2" type="StaticBody2D" parent="boundary"]
position = Vector2( 144, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary/bound2"]
position = Vector2( 0, 80 )
shape = SubResource( 3 )

[node name="WinMenu" parent="." instance=ExtResource( 6 )]

[node name="mainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -12.0

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 112 )

[connection signal="gameOver" from="Player" to="." method="_on_Player_gameOver"]
